[FIX] web: correct misaligned headings in TreeView
If screen were not wide enough for a TreeView, headings in a table were not
aligned to each-other and displayed with a random vertical alignment
instead. The reason of such behavior were arbitrary whitespace around
(within) the column title string. This patch does not remove the extra
whitespace causing the misalignment, but fixes it using an appropriate
CSS style.

Closes #3797

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -2730,6 +2730,9 @@
   padding: 3px 6px;
   line-height: 18px;
 }
+.openerp .oe_list_content th div {
+  display: table-caption;
+}
 .openerp .oe_list_content th.oe_sortable, .openerp .oe_list_content th.oe_sortable div {
   cursor: pointer;
 }
